# AndKittyInjector

./: .gitignore  .gitmodules  LICENSE  README.md
AndKittyInjector/: Android.mk  Application.mk  CMakeLists.txt  cmake-build.bat  cmake-clean.bat  logcat.bat  makefile  runtest.bat  runtest_google.bat
AndKittyInjector/src/: KittyCmdln.cpp  KittyCmdln.hpp  Utils.cpp  Utils.hpp  am_process_start.hpp  main.cpp
AndKittyInjector/src/Injector/: KittyInjector.cpp  KittyInjector.hpp  KittyInjectorSyscall.hpp  RemoteSyscall.hpp  SoInfoPatch.hpp
AndKittyInjector/src/NativeBridge/: NativeBridge.hpp
AndKittyInjector/src/xdl/: xdl.c  xdl.h
testlib/: Android.mk  Application.mk  example.cpp
